# xontrib-avox-poetry

./: README.md  pyproject.toml  tasks.py
xontrib/: avox-poetry.xsh
xontrib/avox_poetry/: __init__.py  utils.py  venv.py  venv_poetry.py
xontrib_avox_poetry/: loader.py  venv.py  venv_poetry.py
