[tool.poetry]
name = "xontrib-avox-poetry"
version = "0.3.1"
description = "auto-activate venv as one cd into a poetry project"
authors = ["Noortheen Raja NJ <jnoortheen@gmail.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/jnoortheen/xontrib-avox-poetry"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Documentation = "https://github.com/jnoortheen/xontrib-avox-poetry/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-avox-poetry"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-avox-poetry/issues"


[tool.poetry.dependencies]
python = ">=3.8"
xonsh = ">=0.12.5"
tomli = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = { version = "*", allow-prereleases = true }

[tool.poetry.plugins."xonsh.xontribs"]
"avox_poetry" = "xontrib_avox_poetry.loader"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

