[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Noortheen Raja NJ", email = "jnoortheen@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "xonsh>=0.12.5",
    "tomli",
]
name = "xontrib-avox-poetry"
version = "0.3.3"
description = "auto-activate venv as one cd into a poetry project"
readme = "README.md"
keywords = ["xontrib", "xonsh"]
classifiers = ["Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Topic :: System :: Shells", "Topic :: System :: System Shells", "Topic :: Terminals", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]

[project.urls]
Documentation = "https://github.com/jnoortheen/xontrib-avox-poetry/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-avox-poetry"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-avox-poetry/issues"
repository = "https://github.com/jnoortheen/xontrib-avox-poetry"

[project.entry-points."xonsh.xontribs"]
avox_poetry = "xontrib_avox_poetry.loader"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]